# apps/server/src/controllers/reference-component/index.ts
@@ -1,0 +1,3 @@
+import { ComponentDefinitionController } from "./component-definition.controller";
+
+export const REFERENCE_COMPONENT_CONTROLLERS = [ComponentDefinitionController];
